# adaptuner

./: Cargo.toml  flake.nix
doc/: skizze.tex  springs.tex
src/: connections.rs  keystate.rs  lib.rs  msg.rs  neighbourhood.rs  reference.rs  run.rs
src/backend/: mod.rs  onlyforward.rs  pitchbend.rs  pitchbend12.rs  trait.rs
src/gui/: connectionwindow.rs  latencywindow.rs  manywindows.rs  mod.rs  notewindow.rs  referencewindow.rs  trait.rs
src/interval/: base.rs  fundamental.rs  mod.rs  stack.rs  temperament.rs
src/interval/stacktype/: fivelimit.rs  trait.rs
src/maybeconnected/: common.rs  input.rs  mod.rs  output.rs
src/notename/: johnston.rs  mod.rs
src/process/: fromstrategy.rs  mod.rs  onlyforward.rs  walking.rs
src/process/springs/: fixed.rs  mod.rs  solver.rs  util.rs
src/strategy/: anchorfixed.rs  mod.rs  static.rs  trait.rs  twostep.rs
src/strategy/chordlist/: mod.rs  pattern.rs
src/util/: lu.rs
