[package]
name = "adaptuner"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
midi-msg = "0.6.1"
midir = "0.9.1"
ratatui = {version = "0.26.1", features = ["unstable-widget-ref"]}
ndarray = {version = "0.15.6", features = ["serde"]}
num-integer = "0.1.46"
num-traits = "0.2.18"
fractionfree = "0.1.4"
colorous = "1.0.13"
serde_derive = "1.0.198"
ctrlc = "3.4.4"
deser-hjson = "2.2.4"
serde = "1.0.204"
num-rational = {version = "0.4.2", features = ["serde"]}
eframe = "0.31.1"
egui_extras = { version = "0.31.1", features = ["svg"]}

[dev-dependencies]
approx = "0.5.1"
pretty_assertions = "1.4.0"
